--- a/data/menus.ui
+++ b/data/menus.ui
@@ -17,6 +17,10 @@
         <attribute name="action">app.help</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Keyboard Shortcuts</attribute>
+        <attribute name="action">win.show-help-overlay</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">About System Monitor</attribute>
         <attribute name="action">win.about</attribute>
       </item>
