--- a/data/interface.ui
+++ b/data/interface.ui
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <!-- interface-requires gtk+ 3.12 -->
   <object class="GtkApplicationWindow" id="main_window">
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="title" translatable="yes">System Monitor</property>
     <property name="default_width">440</property>
     <property name="default_height">495</property>
@@ -23,7 +23,7 @@
         <child>
           <object class="GtkMenuButton" id="process_menu_button">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="use_popover">True</property>
             <property name="valign">center</property>
             <property name="halign">end</property>
@@ -40,7 +40,7 @@
         <child>
           <object class="GtkMenuButton" id="window_menu_button">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="use_popover">True</property>
             <property name="valign">center</property>
             <property name="halign">end</property>
@@ -82,32 +82,32 @@
     <child>
       <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="width_request">560</property>
         <child>
           <object class="GtkStack" id="stack">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <child>
               <object class="GtkBox" id="proc_box">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkSearchBar" id="proc_searchbar">
                     <property name="visible">False</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="vexpand_set">True</property>
                     <property name="vexpand">False</property>
                     <child>
                       <object class="GtkSearchEntry" id="proc_searchentry">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
+                        <property name="can-focus">True</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="halign">fill</property>
@@ -124,7 +124,7 @@
                 <child>
                   <object class="GtkScrolledWindow" id="processes_scrolled">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="shadow_type">none</property>
@@ -149,7 +149,7 @@
                           <object class="GtkButton" id="end_process_button">
                             <property name="label" translatable="yes">_End Process</property>
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
+                            <property name="can-focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="halign">start</property>
                             <property name="use_underline">True</property>
@@ -188,14 +188,14 @@
             <child>
               <object class="GtkScrolledWindow" id="res_scrolled">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkBox" id="res_box">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border_width">8</property>
@@ -204,7 +204,7 @@
                     <child>
                       <object class="GtkLabel" id="cpu_label">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">CPU History</property>
                         <attributes>
@@ -220,7 +220,7 @@
                     <child>
                       <object class="GtkBox" id="cpu_graph_box">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="orientation">vertical</property>
@@ -228,7 +228,7 @@
                         <child>
                           <object class="GtkGrid" id="cpu_table">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
+                            <property name="can-focus">False</property>
                             <property name="margin_start">57</property>
                             <property name="hexpand">True</property>
                             <property name="row_spacing">1</property>
@@ -280,7 +280,7 @@
                     <child>
                       <object class="GtkLabel" id="mem_label">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">Memory and Swap History</property>
                         <attributes>
@@ -296,7 +296,7 @@
                     <child>
                       <object class="GtkBox" id="mem_graph_box">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="orientation">vertical</property>
@@ -304,7 +304,7 @@
                         <child>
                           <object class="GtkGrid" id="mem_table">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
+                            <property name="can-focus">False</property>
                             <property name="margin_start">54</property>
                             <property name="hexpand">True</property>
                             <property name="row_spacing">0</property>
@@ -313,7 +313,7 @@
                             <child>
                               <object class="GtkLabel" id="memory_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">True</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Memory</property>
@@ -328,7 +328,7 @@
                             <child>
                               <object class="GtkLabel" id="swap_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">True</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Swap</property>
@@ -367,7 +367,7 @@
                     <child>
                       <object class="GtkLabel" id="net_label">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">Network History</property>
                         <attributes>
@@ -383,7 +383,7 @@
                     <child>
                       <object class="GtkBox" id="net_graph_box">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
                         <property name="orientation">vertical</property>
@@ -391,7 +391,7 @@
                         <child>
                           <object class="GtkGrid" id="net_table">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
+                            <property name="can-focus">False</property>
                             <property name="margin_start">54</property>
                             <property name="margin_end">12</property>
                             <property name="hexpand">True</property>
@@ -401,7 +401,7 @@
                             <child>
                               <object class="GtkLabel" id="receiving_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">False</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Receiving</property>
@@ -416,7 +416,7 @@
                             <child>
                               <object class="GtkLabel" id="total_received_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">False</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Total Received</property>
@@ -431,7 +431,7 @@
                             <child>
                               <object class="GtkLabel" id="sending_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">False</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Sending</property>
@@ -446,7 +446,7 @@
                             <child>
                               <object class="GtkLabel" id="total_sent_label">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="hexpand">False</property>
                                 <property name="halign">start</property>
                                 <property name="label" translatable="yes">Total Sent</property>
@@ -502,12 +502,12 @@
             <child>
               <object class="GtkBox" id="fs_box">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkScrolledWindow" id="disks_scrolled">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can-focus">True</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="shadow_type">none</property>
