--- a/data/interface.ui
+++ b/data/interface.ui
@@ -204,7 +204,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="halign">start</property>
-                        <property name="label" translatable="yes">CPU History</property>
+                        <property name="label" translatable="yes">CPU</property>
                         <attributes>
                           <attribute name="weight" value="bold"/>
                         </attributes>
@@ -253,7 +253,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="halign">start</property>
-                        <property name="label" translatable="yes">Memory and Swap History</property>
+                        <property name="label" translatable="yes">Memory and Swap</property>
                         <attributes>
                           <attribute name="weight" value="bold"/>
                         </attributes>
@@ -340,7 +340,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="halign">start</property>
-                        <property name="label" translatable="yes">Network History</property>
+                        <property name="label" translatable="yes">Network</property>
                         <attributes>
                           <attribute name="weight" value="bold"/>
                         </attributes>
