--- a/data/interface.ui
+++ b/data/interface.ui
@@ -214,6 +214,7 @@
                             <property name="vexpand">True</property>
                             <property name="orientation">vertical</property>
                             <property name="margin_top">6</property>
+                            <property name="spacing">6</property>
                             <child>
                               <object class="GtkGrid" id="cpu_table">
                                 <property name="visible">True</property>
@@ -279,6 +280,7 @@
                             <property name="vexpand">True</property>
                             <property name="orientation">vertical</property>
                             <property name="margin_top">6</property>
+                            <property name="spacing">6</property>
                             <child>
                               <object class="GtkGrid" id="mem_table">
                                 <property name="visible">True</property>
@@ -382,6 +384,7 @@
                             <property name="vexpand">True</property>
                             <property name="orientation">vertical</property>
                             <property name="margin_top">6</property>
+                            <property name="spacing">6</property>
                             <child>
                               <object class="GtkGrid" id="net_table">
                                 <property name="visible">True</property>
